--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@hookform/resolvers": "^3.10.0",
+    "@portone/browser-sdk": "^0.0.12",
     "antd": "^5.21.6",
     "apollo-upload-client": "^18.0.1",
     "axios": "^1.7.7",
